--- a/frontend/Apartment_Fe/src/components/ChatApp/ChatApp.css
+++ b/frontend/Apartment_Fe/src/components/ChatApp/ChatApp.css
@@ -1,377 +1,375 @@
 /* CONTAINER  CSS */
 .container-chat-app {
-    width: 80vw;
-    height: 90vh;
-    background-color: rgba(17, 25, 40, 0.75);
-    backdrop-filter: blur(19px) saturate(180%);
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
-    display: flex;
-  
-    .list {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-    }
-  
-    div {
-      scrollbar-width: thin;
-    }
-  
-    /* COMMON CSS */
-  
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-        'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-  
-    .loading {
-      padding: 50px;
-      font-size: 36px;
-      border-radius: 10px;
-      background-color: rgba(17, 25, 40, 0.9);
-    }
-  }
-  
-  /* CHAT LIST CSS */
-  .chatList {
+  width: 80vw;
+  height: 90vh;
+  background-color: rgba(40, 167, 69, 0.75); /* Main color changed */
+  backdrop-filter: blur(19px) saturate(180%);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  display: flex;
+
+  .list {
     flex: 1;
-    overflow-y: scroll;
-  
-    .search {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      padding: 20px;
-  
-      .searchBar {
-        flex: 1;
-        background-color: rgba(17, 25, 40, 0.5);
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        border-radius: 10px;
-        padding: 10px;
-  
-        input {
-          background-color: transparent;
-          border: none;
-          outline: none;
-          color: white;
-          flex: 1;
-        }
-  
-        img {
-          width: 20px;
-          height: 20px;
-        }
-      }
-  
-      .add {
-        width: 36px;
-        height: 36px;
-        background-color: rgba(17, 25, 40, 0.5);
-        padding: 10px;
-        border-radius: 10px;
-        cursor: pointer;
-      }
-    }
-  }
-  
-  /* SEARCH ADD CSS */
-  
-  .addUser {
-    width: max-content;
-    height: max-content;
-    padding: 30px;
-    background-color: rgba(17, 25, 40, 0.781);
-    border-radius: 10px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-  
-    form {
-      display: flex;
-      gap: 20px;
-  
-      input {
-        padding: 20px;
-        border-radius: 10px;
-        border: none;
-        outline: none;
-      }
-  
-      button {
-        padding: 20px;
-        border-radius: 10px;
-        background-color: #1a73e8;
-        color: white;
-        border: none;
-        cursor: pointer;
-      }
-    }
-  
-    .search-user-result {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      cursor: pointer;
-      padding: 15px;
-      border-radius: 10px;
-  
-      &:first-child {
-        margin-top: 10px;
-      }
-  
-      &:hover {
-        background-color: rgba(196, 200, 208, 0.5);
-      }
-      display: flex;
-      align-items: center;
-      gap: 20px;
-  
-      img {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        object-fit: cover;
-      }
-  
-      button {
-        padding: 10px;
-        border-radius: 10px;
-        background-color: #1a73e8;
-        color: white;
-        border: none;
-        cursor: pointer;
-      }
-    }
-  }
-  
-  /* CHAT MESSAGE CSS */
-  .chat {
-    flex: 2;
-    border-left: 1px solid #dddddd35;
-    border-right: 1px solid #dddddd35;
-    height: 100%;
     display: flex;
     flex-direction: column;
-  
-    .top {
-      padding: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      border-bottom: 1px solid #dddddd35;
-  
-      .user {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-  
-        img {
-          width: 60px;
-          height: 60px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
-  
-        .texts {
-          display: flex;
-          flex-direction: column;
-          gap: 5px;
-  
-          span {
-            font-size: 18px;
-            font-weight: bold;
-          }
-  
-          p {
-            font-size: 14px;
-            font-weight: 300;
-            color: #a5a5a5;
-          }
-        }
-      }
-  
-      .icons {
-        display: flex;
-        gap: 20px;
-  
-        img {
-          width: 20px;
-          height: 20px;
-        }
-      }
-    }
-  
-    .center {
-      padding: 20px;
-      flex: 1;
-      overflow-y: scroll;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-  
-      .message {
-        max-width: 70%;
-        display: flex;
-        gap: 20px;
-  
-        &.own {
-          align-self: flex-end;
-  
-          .texts {
-            p {
-              background-color: #5183fe;
-            }
-          }
-        }
-  
-        &.received {
-          align-self: flex-start;
-        }
-  
-        img {
-          width: 30px;
-          height: 30px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
-        .texts {
-          flex: 1;
-          display: flex;
-          flex-direction: column;
-          gap: 5px;
-          max-width: 100%;
-  
-          img {
-            width: 100%;
-            height: 300px;
-            border-radius: 10px;
-            object-fit: cover;
-          }
-  
-          p {
-            padding: 20px;
-            background-color: rgba(17, 25, 40, 0.3);
-            border-radius: 10px;
-            overflow-wrap: break-word;
-            word-wrap: break-word;
-            hyphens: auto;
-          }
-  
-          span {
-            font-size: 13px;
-          }
-        }
-      }
-    }
-  
-    .bottom {
-      padding: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      border-top: 1px solid #dddddd35;
-      gap: 20px;
-      margin-top: auto;
-  
-      .icons {
-        display: flex;
-        gap: 20px;
-      }
-  
-      img {
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-      }
-  
-      textarea {
-        flex: 1;
-        background-color: rgba(17, 25, 40, 0.5);
-        border: none;
-        outline: none;
-        color: white;
-        padding: 20px;
-        border-radius: 10px;
-        font-size: 16px;
-  
-        &:disabled {
-          cursor: not-allowed;
-        }
-      }
-  
-      .emoji {
-        position: relative;
-  
-        .picker {
-          position: absolute;
-          bottom: 50px;
-          left: 0;
-        }
-      }
-  
-      .sendButton {
-        background-color: #5183fe;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-  
-        &:disabled {
-          background-color: #5182feb4;
-          cursor: not-allowed;
-        }
-      }
-    }
   }
+
+  div {
+    scrollbar-width: thin;
+  }
+
+  /* COMMON CSS */
   
-  /* CHAT LIST ITEM CSS */
-  .chat-list-item {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+      'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+
+  .loading {
+    padding: 50px;
+    font-size: 36px;
+    border-radius: 10px;
+    background-color: rgba(40, 167, 69, 0.9); /* Main color changed */
+  }
+}
+
+/* CHAT LIST CSS */
+.chatList {
+  flex: 1;
+  overflow-y: scroll;
+
+  .search {
     display: flex;
     align-items: center;
     gap: 20px;
     padding: 20px;
+
+    .searchBar {
+      flex: 1;
+      background-color: rgba(40, 167, 69, 0.5); /* Main color changed */
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      border-radius: 10px;
+      padding: 10px;
+
+      input {
+        background-color: transparent;
+        border: none;
+        outline: none;
+        color: white;
+        flex: 1;
+      }
+
+      img {
+        width: 20px;
+        height: 20px;
+      }
+    }
+
+    .add {
+      width: 36px;
+      height: 36px;
+      background-color: rgba(40, 167, 69, 0.5); /* Main color changed */
+      padding: 10px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+  }
+}
+
+/* SEARCH ADD CSS */
+.addUser {
+  width: max-content;
+  height: max-content;
+  padding: 30px;
+  background-color: rgba(40, 167, 69, 0.781); /* Main color changed */
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+
+  form {
+    display: flex;
+    gap: 20px;
+
+    input {
+      padding: 20px;
+      border-radius: 10px;
+      border: none;
+      outline: none;
+    }
+
+    button {
+      padding: 20px;
+      border-radius: 10px;
+      background-color: #1a73e8;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+  }
+
+  .search-user-result {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     cursor: pointer;
-    border-bottom: 1px solid #dddddd35;
-  
+    padding: 15px;
+    border-radius: 10px;
+
+    &:first-child {
+      margin-top: 10px;
+    }
+
     &:hover {
-      background-color: rgba(17, 25, 40, 0.75);
+      background-color: rgba(196, 200, 208, 0.5);
     }
-  
-    &.active {
-      background-color: rgba(17, 25, 40, 0.75);
-    }
-  
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
     img {
       width: 50px;
       height: 50px;
       border-radius: 50%;
       object-fit: cover;
     }
-  
-    .texts {
+
+    button {
+      padding: 10px;
+      border-radius: 10px;
+      background-color: #1a73e8;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+  }
+}
+
+/* CHAT MESSAGE CSS */
+.chat {
+  flex: 2;
+  border-left: 1px solid #dddddd35;
+  border-right: 1px solid #dddddd35;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  .top {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #dddddd35;
+
+    .user {
       display: flex;
-      flex-direction: column;
-      gap: 10px;
-  
-      span {
-        font-weight: 500;
+      align-items: center;
+      gap: 20px;
+
+      img {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        object-fit: cover;
       }
-  
-      p {
-        font-size: 14px;
-        font-weight: 300;
+
+      .texts {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        span {
+          font-size: 18px;
+          font-weight: bold;
+        }
+
+        p {
+          font-size: 14px;
+          font-weight: 300;
+          color: #a5a5a5;
+        }
+      }
+    }
+
+    .icons {
+      display: flex;
+      gap: 20px;
+
+      img {
+        width: 20px;
+        height: 20px;
       }
     }
   }
-  
+
+  .center {
+    padding: 20px;
+    flex: 1;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .message {
+      max-width: 70%;
+      display: flex;
+      gap: 20px;
+
+      &.own {
+        align-self: flex-end;
+
+        .texts {
+          p {
+            background-color: #28a745; /* Main color changed */
+          }
+        }
+      }
+
+      &.received {
+        align-self: flex-start;
+      }
+
+      img {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+      .texts {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        max-width: 100%;
+
+        img {
+          width: 100%;
+          height: 300px;
+          border-radius: 10px;
+          object-fit: cover;
+        }
+
+        p {
+          padding: 20px;
+          background-color: rgba(40, 167, 69, 0.3); /* Main color changed */
+          border-radius: 10px;
+          overflow-wrap: break-word;
+          word-wrap: break-word;
+          hyphens: auto;
+        }
+
+        span {
+          font-size: 13px;
+        }
+      }
+    }
+  }
+
+  .bottom {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #dddddd35;
+    gap: 20px;
+    margin-top: auto;
+
+    .icons {
+      display: flex;
+      gap: 20px;
+    }
+
+    img {
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
+    }
+
+    textarea {
+      flex: 1;
+      background-color: rgba(40, 167, 69, 0.5); /* Main color changed */
+      border: none;
+      outline: none;
+      color: white;
+      padding: 20px;
+      border-radius: 10px;
+      font-size: 16px;
+
+      &:disabled {
+        cursor: not-allowed;
+      }
+    }
+
+    .emoji {
+      position: relative;
+
+      .picker {
+        position: absolute;
+        bottom: 50px;
+        left: 0;
+      }
+    }
+
+    .sendButton {
+      background-color: #28a745; /* Main color changed */
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+
+      &:disabled {
+        background-color: #28a745b4; /* Main color changed */
+        cursor: not-allowed;
+      }
+    }
+  }
+}
+
+/* CHAT LIST ITEM CSS */
+.chat-list-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+  cursor: pointer;
+  border-bottom: 1px solid #dddddd35;
+
+  &:hover {
+    background-color: rgba(40, 167, 69, 0.75); /* Main color changed */
+  }
+
+  &.active {
+    background-color: rgba(40, 167, 69, 0.75); /* Main color changed */
+  }
+
+  img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .texts {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    span {
+      font-weight: 500;
+    }
+
+    p {
+      font-size: 14px;
+      font-weight: 300;
+    }
+  }
+}
